--- a/DS3000_FP4_Section2_Group16.ipynb
+++ b/DS3000_FP4_Section2_Group16.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -817,7 +817,7 @@
        "Electrical         1  0.000685"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
        "[1459 rows x 62 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1280,7 +1280,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
        "[50 rows x 62 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2884,16 +2884,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21f4c850>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a16eb9c10>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2936,16 +2936,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e6b5590>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a16790c50>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2983,16 +2983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a26c465d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a15f134d0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3024,16 +3024,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a26e55790>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a163a4910>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3064,10 +3064,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "alignmentgroup": "True",
+         "error_x": {
+          "array": [
+           7371.4408455091625,
+           13500,
+           3582.544123361683,
+           5298.042458661733,
+           9492.868581932027,
+           4197.09178939462,
+           9643.224203841353,
+           4320.861645867324,
+           4048.828974194433,
+           5487.097342808139,
+           5697.416399844582,
+           5212.375047657518,
+           2205.023030017587,
+           3125.771509701917,
+           4350.679051003824,
+           18961.471640763073,
+           10984.94998941763,
+           4952.950233462122,
+           6524.583535848604,
+           2597.568501873784,
+           7245.272990029192,
+           6057.781643217055,
+           22593.935328091917,
+           10519.353748471767,
+           21820.170363925754
+          ]
+         },
+         "error_y": {
+          "array": [
+           7371.4408455091625,
+           13500,
+           3582.544123361683,
+           5298.042458661733,
+           9492.868581932027,
+           4197.09178939462,
+           9643.224203841353,
+           4320.861645867324,
+           4048.828974194433,
+           5487.097342808139,
+           5697.416399844582,
+           5212.375047657518,
+           2205.023030017587,
+           3125.771509701917,
+           4350.679051003824,
+           18961.471640763073,
+           10984.94998941763,
+           4952.950233462122,
+           6524.583535848604,
+           2597.568501873784,
+           7245.272990029192,
+           6057.781643217055,
+           22593.935328091917,
+           10519.353748471767,
+           21820.170363925754
+          ]
+         },
+         "hoverlabel": {
+          "namelength": 0
+         },
+         "hovertemplate": "Neighborhood=%{x}<br>SalePrice=%{y}",
+         "legendgroup": "",
+         "marker": {
+          "color": "#1f77b4"
+         },
+         "name": "",
+         "offsetgroup": "",
+         "orientation": "v",
+         "showlegend": false,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "Blmngtn",
+          "Blueste",
+          "BrDale",
+          "BrkSide",
+          "ClearCr",
+          "CollgCr",
+          "Crawfor",
+          "Edwards",
+          "Gilbert",
+          "IDOTRR",
+          "MeadowV",
+          "Mitchel",
+          "NAmes",
+          "NPkVill",
+          "NWAmes",
+          "NoRidge",
+          "NridgHt",
+          "OldTown",
+          "SWISU",
+          "Sawyer",
+          "SawyerW",
+          "Somerst",
+          "StoneBr",
+          "Timber",
+          "Veenker"
+         ],
+         "xaxis": "x",
+         "y": [
+          194870.88235294117,
+          137500,
+          104493.75,
+          124834.05172413793,
+          212565.42857142858,
+          197965.77333333335,
+          210624.72549019608,
+          128219.7,
+          192854.50632911394,
+          100123.78378378379,
+          98576.4705882353,
+          156270.1224489796,
+          145847.08,
+          142694.44444444444,
+          189050.0684931507,
+          335295.31707317074,
+          316270.6233766234,
+          128225.30088495575,
+          142591.36,
+          136793.13513513515,
+          186555.7966101695,
+          225379.83720930232,
+          310499,
+          242247.44736842104,
+          238772.72727272726
+         ],
+         "yaxis": "y"
+        }
+       ],
+       "layout": {
+        "barmode": "relative",
+        "height": 600,
+        "legend": {
+         "tracegroupgap": 0
+        },
+        "margin": {
+         "t": 60
+        },
+        "template": {},
+        "width": 500,
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          0.98
+         ],
+         "title": {
+          "text": "Neighborhood"
+         }
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ],
+         "title": {
+          "text": "SalePrice"
+         }
+        }
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "        \n",
+       "        \n",
+       "            <div id=\"561963d4-fdd6-4449-bac1-e55b7d77e20a\" class=\"plotly-graph-div\" style=\"height:600px; width:500px;\"></div>\n",
+       "            <script type=\"text/javascript\">\n",
+       "                require([\"plotly\"], function(Plotly) {\n",
+       "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
+       "                    \n",
+       "                if (document.getElementById(\"561963d4-fdd6-4449-bac1-e55b7d77e20a\")) {\n",
+       "                    Plotly.newPlot(\n",
+       "                        '561963d4-fdd6-4449-bac1-e55b7d77e20a',\n",
+       "                        [{\"alignmentgroup\": \"True\", \"error_x\": {\"array\": [7371.4408455091625, 13500.0, 3582.544123361683, 5298.042458661733, 9492.868581932027, 4197.09178939462, 9643.224203841353, 4320.861645867324, 4048.828974194433, 5487.097342808139, 5697.416399844582, 5212.375047657518, 2205.023030017587, 3125.771509701917, 4350.679051003824, 18961.471640763073, 10984.94998941763, 4952.950233462122, 6524.583535848604, 2597.568501873784, 7245.272990029192, 6057.781643217055, 22593.935328091917, 10519.353748471767, 21820.170363925754]}, \"error_y\": {\"array\": [7371.4408455091625, 13500.0, 3582.544123361683, 5298.042458661733, 9492.868581932027, 4197.09178939462, 9643.224203841353, 4320.861645867324, 4048.828974194433, 5487.097342808139, 5697.416399844582, 5212.375047657518, 2205.023030017587, 3125.771509701917, 4350.679051003824, 18961.471640763073, 10984.94998941763, 4952.950233462122, 6524.583535848604, 2597.568501873784, 7245.272990029192, 6057.781643217055, 22593.935328091917, 10519.353748471767, 21820.170363925754]}, \"hoverlabel\": {\"namelength\": 0}, \"hovertemplate\": \"Neighborhood=%{x}<br>SalePrice=%{y}\", \"legendgroup\": \"\", \"marker\": {\"color\": \"#1f77b4\"}, \"name\": \"\", \"offsetgroup\": \"\", \"orientation\": \"v\", \"showlegend\": false, \"textposition\": \"auto\", \"type\": \"bar\", \"x\": [\"Blmngtn\", \"Blueste\", \"BrDale\", \"BrkSide\", \"ClearCr\", \"CollgCr\", \"Crawfor\", \"Edwards\", \"Gilbert\", \"IDOTRR\", \"MeadowV\", \"Mitchel\", \"NAmes\", \"NPkVill\", \"NWAmes\", \"NoRidge\", \"NridgHt\", \"OldTown\", \"SWISU\", \"Sawyer\", \"SawyerW\", \"Somerst\", \"StoneBr\", \"Timber\", \"Veenker\"], \"xaxis\": \"x\", \"y\": [194870.88235294117, 137500.0, 104493.75, 124834.05172413793, 212565.42857142858, 197965.77333333335, 210624.72549019608, 128219.7, 192854.50632911394, 100123.78378378379, 98576.4705882353, 156270.1224489796, 145847.08, 142694.44444444444, 189050.0684931507, 335295.31707317074, 316270.6233766234, 128225.30088495575, 142591.36, 136793.13513513515, 186555.7966101695, 225379.83720930232, 310499.0, 242247.44736842104, 238772.72727272726], \"yaxis\": \"y\"}],\n",
+       "                        {\"barmode\": \"relative\", \"height\": 600, \"legend\": {\"tracegroupgap\": 0}, \"margin\": {\"t\": 60}, \"template\": {}, \"width\": 500, \"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.98], \"title\": {\"text\": \"Neighborhood\"}}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0], \"title\": {\"text\": \"SalePrice\"}}},\n",
+       "                        {\"responsive\": true}\n",
+       "                    ).then(function(){\n",
+       "                            \n",
+       "var gd = document.getElementById('561963d4-fdd6-4449-bac1-e55b7d77e20a');\n",
+       "var x = new MutationObserver(function (mutations, observer) {{\n",
+       "        var display = window.getComputedStyle(gd).display;\n",
+       "        if (!display || display === 'none') {{\n",
+       "            console.log([gd, 'removed!']);\n",
+       "            Plotly.purge(gd);\n",
+       "            observer.disconnect();\n",
+       "        }}\n",
+       "}});\n",
+       "\n",
+       "// Listen for the removal of the full notebook cells\n",
+       "var notebookContainer = gd.closest('#notebook-container');\n",
+       "if (notebookContainer) {{\n",
+       "    x.observe(notebookContainer, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "// Listen for the clearing of the current output cell\n",
+       "var outputEl = gd.closest('.output');\n",
+       "if (outputEl) {{\n",
+       "    x.observe(outputEl, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "                        })\n",
+       "                };\n",
+       "                });\n",
+       "            </script>\n",
+       "        </div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import plotly.express as plt\n",
+    "# What are the average prices of houses in different neighborhoods?\n",
+    "tbl = pd.read_csv(\"train.csv\")\n",
+    "descriptives = tbl.groupby('Neighborhood')['SalePrice'].agg(['count', 'mean', 'std', 'sem'])\n",
+    "descriptives.reset_index(inplace=True)\n",
+    "\n",
+    "graph = plt.bar(descriptives, x = \"Neighborhood\", y = \"mean\", error_x = \"sem\", error_y = \"sem\", template='none', width=500, \n",
+    "                labels = {\"mean\": \"SalePrice\", \"Group\": \"Neighborhood\"})\n",
+    "graph"
+   ]
   },
   {
    "cell_type": "code",
